[package]
name = "pfhs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = "0.15.0"
rand = "0.8.5"
bls12_381 = "0.8.0"
borsh = { version = "1.3.0", features = ["derive"] }
indexmap = "2.1.0"
bs58 = "0.5.0"
